[project]
name = "cascade-failure-env"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "requests",
]

[project.scripts]
openenv-server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"